# eda-project

./: README.md  main.py  pyproject.toml  requirements.txt  scrapy.cfg
data/processed/: conference_dominant_topics.csv  conference_topic_year_counts.csv  product_feature_first_seen.csv  product_feature_timeline.csv  source_summary.csv  top_relevant_articles.csv  topic_cooccurrence.csv  topic_summary.csv  topic_year_counts.csv
data/raw/: conference_event_seeds.csv  crossref_identity_overlay_targeted.csv  openalex_workplace_inclusion.csv  product_changelog_seeds.csv  pubmed_identity_overlay_targeted.csv  scraped_conference_sessions.csv  scrapy_seed_sources.md  scrapy_seed_urls.csv  semantic_scholar_identity_overlay_targeted.csv.disabled
docs/: FUNKCJE_METODY_KOMENDY.md  METODOLOGIA_EDA.md  OPIS_PROJEKTU_I_FIGUR.md  README_PLIKI.md  SCRAPING_ZAMYSL.md  TEMATY_BADAWCZE.txt
notebooks/: 01_openalex_data_collection.ipynb
scratch/: find_start_requests.py
src/: __init__.py
src/analysis/: __init__.py  generate_scraping_visuals.py  identity_overlay_eda.py  scraping_timeline_analysis.py
src/api/: __init__.py  collect_all_sources.py  crossref_identity_overlay.py  openalex_identity_overlay.py  pubmed_identity_overlay.py  query_plan.py
src/scraping/: __init__.py
src/scraping/identity_scraper/: __init__.py  items.py  settings.py
src/scraping/identity_scraper/spiders/: __init__.py  conference_sessions.py  product_changelogs.py  web_practice_sources.py
