[project]
name = "identity-overlay-eda"
version = "0.1.0"
description = "Exploratory multi-source analysis for an article on inclusive identity representation in organisational information systems."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scrapy>=2.13.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "wordcloud>=1.9.6",
]
